--- a/oop/index.html
+++ b/oop/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello this is me manoj , </h1>
+    <h1>prototype practice, </h1>
 </body>
 <script src="index.js"> </script>
 </html>
