--- a/Dom_manipulation/index1.html
+++ b/Dom_manipulation/index1.html
@@ -6,19 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="root">
-        <h1 class = "header">manu</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat totam quia asperiores eius reiciendis rem quidem accusamus, fugit ipsum sapiente sequi commodi corrupti facilis odit beatae cum suscipit delectus odio!</p>
+    <div id="parent"> 
+        <p>hello</p>
 
-        <img id = "myImg" src="image.png"> 
     </div>
     <script>
+        const para = document.createElement("p");
+        para.innerHTML = "manoj ,how are you!";
 
-        const header =  document.querySelector(".header");
-        header.innerHTML = "dom manipulation";
-
+        const parent = document.getElementById("parent");
+        parent.appendChild(para);
         
-
     </script>
 </body>
 </html>
