--- a/Dom_manipulation/index1.html
+++ b/Dom_manipulation/index1.html
@@ -7,16 +7,24 @@
 </head>
 <body>
     <div id="parent"> 
-        <p>hello</p>
+
+        <p id="oldpara">hello</p>
 
     </div>
     <script>
-        const para = document.createElement("p");
+        const para = document.createElement("p");        
         para.innerHTML = "manoj ,how are you!";
 
-        const parent = document.getElementById("parent");
-        parent.appendChild(para);
+          const parent = document.getElementById("parent");    // new ele creation  
+     //   parent.appendChild(para);                                    // and appending it
         
+
+        const exisitingPara = document.getElementById("oldpara");
+
+        parent.insertBefore(para,exisitingPara)                           //  and inserting it before any ele 
+
+
+        exisitingPara.remove();                                             // removeing ele 
     </script>
 </body>
 </html>
