--- a/Dom_manipulation/index1.html
+++ b/Dom_manipulation/index1.html
@@ -6,6 +6,19 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="container">
+        <h1>To Do List </h1>
+        <textarea name="text" class="textarea" cols="15" rows="1"></textarea>
+        <button>Add</button>
+    </div>
     
+   <div id= "to-do" class="to-do-list">
+
+   </div>
+
+   <script src="index.js">
+    
+   </script>
+
 </body>
 </html>
