--- a/js_and_browser/index.html
+++ b/js_and_browser/index.html
@@ -6,7 +6,9 @@
     <title>localstorage</title>
 </head>
 <body>
-    <h1>localstorage</h1>
+    <h1>sessionStorage</h1>
+    <input type="text" id="random">
+
     <script src="index.js"></script>
 </body>
 </html>
