--- a/Dom_manipulation/index.html
+++ b/Dom_manipulation/index.html
@@ -9,23 +9,43 @@
     <div id="parent"> 
 
         <p id="oldpara">hello</p>
+        <button onclick="colorChange()">click me </button>
+        <div  id="box" style="width: 200px; height:200px; border: 1px solid black;"> box </div>
+
+        <input type="text"  onchange="upperCase()">
 
     </div>
 
     <script>
-       const para = document.createElement("p");             // new ele creation  
-       para.innerHTML = "manoj ,how are you!";
+    //const para = document.createElement("p");             // new ele creation  
+    //para.innerHTML = "manoj ,how are you!";
 
-        const parent = document.getElementById("parent");   
-        parent.appendChild(para);                                    // and appending it
+    //const parent = document.getElementById("parent");   
+    //parent.appendChild(para);                                    // and appending it
+    //
+    //
+    //onst exisitingPara = document.getElementById("oldpara");
+    //
+    //arent.insertBefore(para,exisitingPara)                           //  and inserting it before any ele 
+
+
+        // exisitingPara.remove();          // removeing ele 
+
+        document.querySelector("button").addEventListener("click",textChange);
+
+        function textChange(){
+            document.querySelector("p").innerHTML ="manu";
+        }
+
+        document.querySelector("button").addEventListener("dblclick",function (){
+            document.querySelector("button").removeEventListener("click",textChange);
+
+        });
+
+
+
         
 
-        const exisitingPara = document.getElementById("oldpara");
-
-        parent.insertBefore(para,exisitingPara)                           //  and inserting it before any ele 
-
-
-        // exisitingPara.remove();                                             // removeing ele 
-    </script>
+    </script> 
 </body>
 </html>
